RESOLVED FIXED177674
[WinCairo] Fix build after rev 222610
https://bugs.webkit.org/show_bug.cgi?id=177674
Summary [WinCairo] Fix build after rev 222610
Don Olmstead
Reported 2017-09-29 11:45:02 PDT
After rev 22610 the WinCairo buildbot fails to build MediaPlayerPrivateMediaFoundation ..\..\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp(2943): error C2065: 'cairo_format_t': undeclared identifier
Attachments
Patch (1.13 KB, patch)
2017-09-29 11:46 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2017-09-29 11:46:33 PDT
Created attachment 322217 [details] Patch Just add #include <cairo.h>
Per Arne Vollan
Comment 2 2017-09-29 11:49:08 PDT
Comment on attachment 322217 [details] Patch R=me.
WebKit Commit Bot
Comment 3 2017-09-29 12:32:53 PDT
Comment on attachment 322217 [details] Patch Clearing flags on attachment: 322217 Committed r222660: <http://trac.webkit.org/changeset/222660>
WebKit Commit Bot
Comment 4 2017-09-29 12:32:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-09-29 12:34:11 PDT
Note You need to log in before you can comment on or make changes to this bug.