[WinCairo] Fix build after rev 222610 https://bugs.webkit.org/show_bug.cgi?id=177674

Reviewed by Per Arne Vollan.

No new tests. No change in behavior.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:


Canonical link: https://commits.webkit.org/193944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222660 268f45cc-cd09-0410-ab3c-d52691b4dbfc